--- a/AngularMVC.csproj
+++ b/AngularMVC.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CliWrap" Version="1.8.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+    <PackageReference Include="taglib" Version="2.1.0" />
+    <PackageReference Include="Tyrrrz.Extensions" Version="1.5.0" />
     <PackageReference Include="YoutubeExplode" Version="4.2.4" />
   </ItemGroup>
 
@@ -50,5 +53,8 @@
       </ResolvedFileToPublish>
     </ItemGroup>
   </Target>
+  <PropertyGroup>
+  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+</PropertyGroup>
 
 </Project>
