--- a/AngularMVC.csproj
+++ b/AngularMVC.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="1.8.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+    <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
     <PackageReference Include="taglib" Version="2.1.0" />
     <PackageReference Include="Tyrrrz.Extensions" Version="1.5.0" />
     <PackageReference Include="YoutubeExplode" Version="4.2.4" />
