--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12"
+  },
+  "dependencies": {
+    "@types/file-saver": "^1.3.0",
+    "file-saver": "^1.3.8"
   }
 }
